--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jose/base",
+    "name": "jose/base-symfony",
     "license": "proprietary",
     "type": "project",
     "autoload": {
