--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "components/normalize.css": "^3.0",
-        "twbs/bootstrap": "^3.3"
+        "twbs/bootstrap": "^3.3",
+        "components/jquery": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
