--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "twbs/bootstrap": "^3.3",
-        "components/jquery": "^3.1"
+        "components/jquery": "^3.1",
+        "components/jqueryui": "^1.12"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
