--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "twbs/bootstrap": "^3.3",
         "components/jquery": "^3.1",
-        "components/jqueryui": "^1.12"
+        "components/jqueryui": "^1.12",
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
