--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,30 @@ Icon
 ._*
 .Spotlight-V100
 .Trashes
+
+# -- Base Symfony --------------------------------------
+/web/js/base.js
+/web/css/base.css
+
+# JQuery
+/web/js/jquery.min.js
+
+# JQuery UI
+/web/js/jquery-ui.min.js
+/web/css/jquery-ui.min.css
+/web/css/images/ui-bg_flat_0_aaaaaa_40x100.png
+/web/css/images/ui-icons_444444_256x240.png
+/web/css/images/ui-icons_555555_256x240.png
+/web/css/images/ui-icons_777620_256x240.png
+/web/css/images/ui-icons_777777_256x240.png
+/web/css/images/ui-icons_cc0000_256x240.png
+/web/css/images/ui-icons_ffffff_256x240.png
+
+# Bootstrap
+/web/js/bootstrap.min.js
+/web/css/bootstrap.min.css
+/web/fonts/glyphicons-halflings-regular.eot
+/web/fonts/glyphicons-halflings-regular.svg
+/web/fonts/glyphicons-halflings-regular.ttf
+/web/fonts/glyphicons-halflings-regular.woff
+/web/fonts/glyphicons-halflings-regular.woff2
