--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "twbs/bootstrap": "^3.3",
         "components/jquery": "^3.1",
         "components/jqueryui": "^1.12",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "friendsofsymfony/rest-bundle": "^2.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
