--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "components/jquery": "^3.1",
         "components/jqueryui": "^1.12",
         "symfony/assetic-bundle": "^2.8",
-        "friendsofsymfony/rest-bundle": "^2.1"
+        "friendsofsymfony/rest-bundle": "^2.1",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
