--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,8 @@ app:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    prefix: /user
+
+fos_group:
+    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+    prefix: /group
