Restringir determinados accesos unicamente al ROLE_ADMIN.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,5 +33,6 @@ security:
     access_control:
         - { path: ^/user/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user/resetting, role: ROLE_ADMIN }
+        - { path: ^/group, role: ROLE_ADMIN }
         - { path: ^/admin/, role: ROLE_ADMIN }
