--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,10 +2,13 @@ app:
     resource: "@AppBundle/Controller/"
     type:     annotation
 
-fos_user:
-    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
-    prefix: /user
+security:
+    resource: "config/routing/security.yml"
 
-fos_group:
-    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
-    prefix: /group
+user:
+    resource: "config/routing/user.yml"
+    prefix: /users
+
+groups:
+    resource: "config/routing/group.yml"
+    prefix: /groups
