--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,7 +22,7 @@ security:
             anonymous:    true
             guard:
                 authenticators:
-                    - app.security.login_form_authenticator
+                    - app.security.app_authenticator
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
