Reemplazo de AppAuthenticator por FormAuthenticator

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,7 +8,7 @@ services:
     app.response.response_factory:
         class: AppBundle\Response\ResponseFactory
         arguments: ['@service_container']
-
-    app.security.app_authenticator:
-        class: AppBundle\Security\AppAuthenticator
+#Authenticators
+    app.security.form_authenticator:
+        class: AppBundle\Security\FormAuthenticator
         autowire: true
