--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,6 +23,8 @@ security:
             guard:
                 authenticators:
                     - app.security.form_authenticator
+                    - app.security.token_authenticator
+                entry_point: app.security.form_authenticator
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
