--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.20.1"
+    "@symfony/webpack-encore": "^0.20.1",
+    "bootstrap-sass": "^3.3.7",
+    "jquery": "^3.3.1",
+    "jqueryui": "^1.11.1",
+    "webpack-notifier": "^1.6.0"
   }
 }
