--- a/app/Resources/config/controller/usuario.yml
+++ b/app/Resources/config/controller/usuario.yml
@@ -1,30 +1,30 @@
 list:
     accept: ['text/html', 'application/json']
-    template: "group/list.html.twig"
+    template: "usuario/list.html.twig"
 
 new:
     accept: ['text/html']
-    template: "group/new.html.twig"
+    template: "usuario/new.html.twig"
 
 create:
     accept: ['text/html', 'application/json']
-    template: "group/new.html.twig"
+    template: "usuario/new.html.twig"
 
 show:
     accept: ['text/html', 'application/json']
-    template: "group/show.html.twig"
+    template: "usuario/show.html.twig"
 
 edit:
     accept: ['text/html']
-    template: "group/edit.html.twig"
+    template: "usuario/edit.html.twig"
 
 update:
     accept: ['text/html', 'application/json']
-    template: "group/edit.html.twig"
+    template: "usuario/edit.html.twig"
 
 remove:
     accept: ['text/html']
-    template: "group/remove.html.twig"
+    template: "usuario/remove.html.twig"
 
 delete:
     accept: ['text/html', 'application/json']
