--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
         "twbs/bootstrap": "^3.3",
         "components/jquery": "^3.1",
         "components/jqueryui": "^1.12",
-        "symfony/assetic-bundle": "^2.8",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
